
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="40dp"
                android:textAllCaps="true"
                android:text="@string/app_logo"/>
            <EditText
                android:id="@+id/name_space_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_space_field"
                android:inputType="text"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:id="@+id/question_1"
                android:textColor="#193a70"
                android:textSize="23sp"/>
            <CheckBox
                android:id="@+id/cape_colony__natal_colony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_nc"/>
            <CheckBox
                android:id="@+id/orange_farm_kzn_colony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Orang_frm_kzn_colony"/>
            <CheckBox
                android:id="@+id/transval_orange_river_colony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tran_orangeRiver_colony"/>
            <CheckBox
                android:id="@+id/wrong_answer_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none_provided"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:id="@+id/question_2"
                android:textColor="#193a70"
                android:textSize="23sp"/>
            <CheckBox
                android:id="@+id/both_zuma_robberts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/both_zuma_robberts"/>
            <CheckBox
                android:id="@+id/Mandela_ThabisMbheki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mandela_ThabisMbheki"/>
            <CheckBox
                android:id="@+id/Riebeek_Zuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Riebeek_Zuma"/>
            <CheckBox
                android:id="@+id/Mbeki_Riebeek_Mandela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mbeki_Riebeek_Mandela"/>
            <CheckBox
                android:id="@+id/Ramaphosa_montlanthe_Christian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ramaphosa_montlanthe_Christian"/>
            <CheckBox
                android:id="@+id/klerk_Mbeki_Mandela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/klerk_Mbeki_Mandela"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textColor="#193a70"
                android:textSize="23sp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diver_daring"
                android:id="@+id/diver_daring"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trans_unity"
                android:id="@+id/trans_unity"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Trans_courge"
                android:id="@+id/Trans_courge"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diver_love"
                android:id="@+id/diver_love"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:textColor="#193a70"
                android:textSize="23sp"/>
            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/jacob_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/jacobzuma"/>
                <RadioButton
                    android:id="@+id/T_mbheki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/Thabo_mbheki"/>
                <RadioButton
                    android:id="@+id/N_mandela"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/nelson_mandela"/>
                <RadioButton
                    android:id="@+id/F_w_clerk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/de_clerk"/>
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="23dp"
                android:text="@string/submit_button"
                android:id="@+id/checkAnswers"
                android:onClick="checkAnswers"/>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>


